--- a/AI/ai_hw5_2025_fall/AI_HW5.ipynb
+++ b/AI/ai_hw5_2025_fall/AI_HW5.ipynb
@@ -16,18 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "35c26099",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m'py13 (Python 3.13.5)'(으)로 셀을 실행하려면 ipykernel 패키지가 필요합니다.\n",
-      "\u001b[1;31m필요한 패키지를 사용하여 <a href='command:jupyter.createPythonEnvAndSelectController'>Python 환경 만들기</a>\n",
-      "\u001b[1;31m또는 다음 명령을 사용하여 'ipykernel'을(를) 설치합니다. 'conda install -n py13 ipykernel --update-deps --force-reinstall'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Skipping torch as it is not installed.\n",
+      "ERROR: Could not find a version that satisfies the requirement torch==2.3.0 (from versions: 2.6.0, 2.7.0, 2.7.1, 2.8.0, 2.9.0, 2.9.1)\n",
+      "ERROR: No matching distribution found for torch==2.3.0\n"
      ]
     }
    ],
@@ -38,12 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fEUOIf5b55uz",
    "metadata": {
     "id": "fEUOIf5b55uz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting datasets\n",
+      "  Using cached datasets-4.4.1-py3-none-any.whl.metadata (19 kB)\n",
+      "Collecting transformers\n",
+      "  Using cached transformers-4.57.3-py3-none-any.whl.metadata (43 kB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement torchtext==0.18.0 (from versions: 0.1.1, 0.2.0, 0.2.1, 0.2.3, 0.3.1, 0.4.0, 0.5.0, 0.6.0)\n",
+      "ERROR: No matching distribution found for torchtext==0.18.0\n"
+     ]
+    }
+   ],
    "source": [
     "# YOU should run this command if you will train the model in COLAB environment\n",
     "! pip install datasets transformers torchtext==0.18.0"
@@ -51,13 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "83999a8f",
    "metadata": {
     "id": "83999a8f",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myaml\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'yaml'"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import yaml\n",
@@ -679,7 +709,7 @@
    "outputs": [],
    "source": [
     "embeddings_df = pd.DataFrame(embeddings_norm)\n",
-    "fig = go.Figure()\n",
+    "\n",
     "# TODO 5-1) : make 2-d t-SNE graph of all vocabs and color only for numeric values(others, just color black)\n",
     "\n",
     "tsne = TSNE(n_components=2, random_state=0, perplexity=30)\n",
@@ -687,43 +717,45 @@
     "\n",
     "words = vocab.get_itos()\n",
     "\n",
-    "numeric_words = [word for word in words if word.isdigit()]\n",
-    "is_numeric = [word.isdigit() for word in words]\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.cm as cm\n",
     "\n",
     "colors = []\n",
     "for word in words:\n",
     "    if word.isdigit():\n",
-    "        colors.append(int(word) if int(word) < 10 else 9)\n",
+    "        digit_val = int(word)\n",
+    "        colors.append(digit_val if digit_val < 10 else 9)\n",
     "    else:\n",
     "        colors.append(-1)\n",
     "\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=embeddings_tsne[:, 0],\n",
-    "    y=embeddings_tsne[:, 1],\n",
-    "    mode='markers',\n",
-    "    marker=dict(\n",
-    "        size=5,\n",
-    "        color=colors,\n",
-    "        colorscale='Viridis',\n",
-    "        showscale=True,\n",
-    "        cmin=0,\n",
-    "        cmax=9,\n",
-    "    ),\n",
-    "    text=words,\n",
-    "    hoverinfo='text'\n",
-    "))\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
     "\n",
-    "fig.update_layout(\n",
-    "    title=\"t-SNE Visualization of Word Embeddings (Numeric words colored)\",\n",
-    "    xaxis_title=\"t-SNE Component 1\",\n",
-    "    yaxis_title=\"t-SNE Component 2\",\n",
-    "    width=1000,\n",
-    "    height=800\n",
-    ")\n",
+    "numeric_mask = np.array(colors) >= 0\n",
+    "non_numeric_mask = ~numeric_mask\n",
     "\n",
-    "fig.show()\n",
+    "plt.scatter(embeddings_tsne[non_numeric_mask, 0], \n",
+    "           embeddings_tsne[non_numeric_mask, 1],\n",
+    "           c='black', s=10, alpha=0.3, label='Non-numeric')\n",
     "\n",
-    "fig.write_image(os.path.join(result_dir, \"image.png\"))\n"
+    "if numeric_mask.sum() > 0:\n",
+    "    scatter = plt.scatter(embeddings_tsne[numeric_mask, 0], \n",
+    "                         embeddings_tsne[numeric_mask, 1],\n",
+    "                         c=np.array(colors)[numeric_mask], \n",
+    "                         cmap='tab10', s=50, alpha=0.8, \n",
+    "                         edgecolors='black', linewidth=0.5)\n",
+    "    plt.colorbar(scatter, label='Digit Value')\n",
+    "\n",
+    "plt.title(\"t-SNE Visualization of Word Embeddings\\n(Numeric words colored)\", fontsize=16)\n",
+    "plt.xlabel(\"t-SNE Component 1\", fontsize=12)\n",
+    "plt.ylabel(\"t-SNE Component 2\", fontsize=12)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Save the figure\n",
+    "plt.savefig(os.path.join(result_dir, \"image.png\"), dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"Image saved to {os.path.join(result_dir, 'image.png')}\")"
    ]
   },
   {
